# Quotes-API

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Notes.txt  README.md  Readme.md  app.py  config.py  docker-compose.yml  make_celery.py  pyproject.toml  start_api.sh  wsgi.py
constants/: app_constants.py
database/: db.py  models.py  schemas.py
nginx/: Dockerfile  app.conf  supervisor.conf.d
resources/: authentication.py  author.py  quote.py  scrape.py  stats.py
scripts/: migration_script.py
services/scraper/: scheduler.py  scraper.py  utils.py
tests/: author_test.py  celery_test.py  quote_test.py
utils/: celery_app.py  error_handler.py  jwt_auth.py  logger.py  logging.py  rate_limiter.py  scheduler.py  scraping.py  utils.py
