[tool.poetry]
name = "quotes api"
version = "0.1.0"
description = ""
authors = ["karelumair <umair.karel@sarvaha.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
python-dotenv = "^0.21.0"
pymongo = "^4.3.3"
flask-pymongo = "^2.3.0"
flask-mongoengine = "^1.0.0"
flask-restful = "^0.3.9"
pre-commit = "^2.21.0"
pylint = "^2.15.10"
selenium = "^4.8.0"
beautifulsoup4 = "^4.11.2"
requests = "^2.28.2"
html5lib = "^1.1"
flask-expects-json = "^1.7.0"
celery = "^5.2.7"
redis = "^4.5.1"
pydantic = "^1.10.4"

[tool.pylint.messages_control]
disable = "E1101, E0611, W0703, C0301, W0223, W0613, R0903"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
